Fix horizontal scroll on small screens

--- a/layout/style.css.sass
+++ b/layout/style.css.sass
@@ -43,12 +43,11 @@ $easing-width: 120px + 4px
 
 .root, footer
   width: 6 * ($easing-width + 20px) + 35px
-  max-width: 100%
+  max-width: 96%
   margin: 0 auto
   position: relative
 
 .root
-  padding: 0 10px
   overflow: hidden
 
 .about
